--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.clinovo.clincapture</groupId>
     	<artifactId>clincapture</artifactId>
-		<version>2.1.22</version>
+		<version>2.1.23-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
