--- a/web/src/main/resources/extract.properties
+++ b/web/src/main/resources/extract.properties
@@ -275,6 +275,16 @@ extract.11.skipBlanks=false
 extract.11.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.11.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
+extract.12.order=12
+extract.12.odmType=clinical_data
+extract.12.file=ODMToCSV.xsl
+extract.12.fileDescription=Coma Separated Values (.csv)
+extract.12.linkText=Run Now
+extract.12.helpText=Generate a coma separated view of your data.
+extract.12.location=$exportFilePath/$datasetName/CSV
+extract.12.exportname=CSV_$datasetName_$dateTime.csv
+extract.12.skipBlanks=false
+extract.12.success=Your extract job completed successfully. The file is available for download $linkURL.
 ##############################################################
 # 4. Postprocessing Options
 #
