--- a/web/src/main/resources/extract.properties
+++ b/web/src/main/resources/extract.properties
@@ -112,6 +112,16 @@ extract.number=99
 #          If you use a static file name, the file name will be the same each time and will overwrite the prior version of the file.
 ##############################################################
 
+extract.12.order=12
+extract.12.odmType=clinical_data
+extract.12.file=ODMToCSV.xsl
+extract.12.fileDescription=Comma Separated Values (.csv)
+extract.12.linkText=Run Now
+extract.12.helpText=Generate a comma separated view of your data.
+extract.12.location=$exportFilePath/$datasetName/CSV
+extract.12.exportname=CSV_$datasetName_$dateTime.csv
+extract.12.skipBlanks=false
+extract.12.success=Your extract job completed successfully. The file is available for download $linkURL.
 ##############################################################
 # 3. XSL file name templates
 #
